# PacMan

./: .gitignore  README.md  check_maze_validity.py  highscores.json  mazegen_doc.md  pac-man.py  pyproject.toml
src/: Highscores.py  MainGameLoop.py  Parser.py  dataclasses.py  errors.py
src/models/: __init__.py  config_models.py  dataclasses.py
src/screens/: Character.py  InstructionsScreen.py  LoseScreen.py  MainMenu.py  Maze.py  PacMan.py  PlayGame.py  WinLoseScreen.py  __init__.py
src/screens/draw_utils/: DrawMaze.py  FrameBuffer.py  RenderFont.py  RenderMaze.py  RenderText.py  __init__.py
src/screens/game/: Character.py  Ghost.py  Maze.py  PacMan.py  Pacgums.py  PauseScreen.py  RenderMaze.py  __init__.py
src/screens/game/HUD/: HUD.py  Lives.py  Score.py  Timer.py  __init__.py
src/screens/game/ghosts/: Blinky.py  Clyde.py  Ghost.py  Inky.py  Pinky.py  __init__.py
tests/: test_DrawMaze.py  test_Highscores.py  test_main_loop.py  test_parsing.py
tests/jsons/: highscores_test.json  invalid_file_format.jon  invalid_missing_key.json  invalid_pacgum_value.json  invallid_highscore_file.json  invallid_json_format.json  valid_no_comments.json  valid_unknown_keys.json  valid_with_comments.json
