[project]
name = "pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "db>=0.1.1",
    "mazegenerator",
    "mlx",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
mazegenerator = { path = "wheels/mazegenerator-2.0.2-py3-none-any.whl" }
mlx = { path = "wheels/mlx-2.2-py3-none-any.whl" }
